@@ -17,7 +17,7 @@ SUBDIRS = src . tests . man
 
 selintconfdir = $(sysconfdir)
 selintconf_DATA = selint.conf
-EXTRA_DIST = selint.conf
+EXTRA_DIST = selint.conf CHANGELOG LICENSE
 
 check-valgrind:
 	CK_FORK=no $(MAKE) -C tests check-valgrind-memcheck-am
